workloads/network-policies/base/allow-scan-egress-to-character.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scan-egress-to-character
  namespace: scan
spec:
  podSelector:
    matchLabels:
      app: scan-api
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: character
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 50051
