workloads/network-policies/base/allow-scan-to-character.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scan-to-character
  namespace: character
spec:
  podSelector:
    matchLabels:
      app: character-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: scan
    ports:
    - protocol: TCP
      port: 8000
